fixing colour of icon-bar in navbar collapsed

--- a/code/less/style-blue-cyan.less
+++ b/code/less/style-blue-cyan.less
@@ -84,7 +84,7 @@ blockquote{
 #prevslide {
 	background-image: url(../../images/blue-cyan/slideshow-nav-prev.png);
 }
-.toolbar-collapse-btn .icon-bar {
+.toolbar-collapse-btn .icon-bar,.navbar .btn-navbar .icon-bar {
 	background-color: #88D5F2;
 }
 .btn{
