--- a/code/less/style-brown-beige.less
+++ b/code/less/style-brown-beige.less
@@ -84,7 +84,7 @@ blockquote{
 #prevslide {
 	background-image: url(../../images/brown-beige/slideshow-nav-prev.png);
 }
-.toolbar-collapse-btn .icon-bar {
+.toolbar-collapse-btn .icon-bar,.navbar .btn-navbar .icon-bar {
 	background-color: #8F8471;
 }
 .btn{
