--- a/code/less/style-green-gray.less
+++ b/code/less/style-green-gray.less
@@ -84,7 +84,7 @@ blockquote{
 #prevslide {
 	background-image: url(../../images/green-gray/slideshow-nav-prev.png);
 }
-.toolbar-collapse-btn .icon-bar {
+.toolbar-collapse-btn .icon-bar,.navbar .btn-navbar .icon-bar {
 	background-color: #B2B2BA;
 }
 .btn{
