--- a/code/less/style-white-foild.less
+++ b/code/less/style-white-foild.less
@@ -84,7 +84,7 @@ blockquote{
 #prevslide {
 	background-image: url(../../images/white-foild/slideshow-nav-prev.png);
 }
-.toolbar-collapse-btn .icon-bar {
+.toolbar-collapse-btn .icon-bar,.navbar .btn-navbar .icon-bar {
 	background-color: #BFB0A3;
 }
 .btn{
