--- a/code/less/style-white-gray.less
+++ b/code/less/style-white-gray.less
@@ -84,7 +84,7 @@ blockquote{
 #prevslide {
 	background-image: url(../../images/white-gray/slideshow-nav-prev.png);
 }
-.toolbar-collapse-btn .icon-bar {
+.toolbar-collapse-btn .icon-bar,.navbar .btn-navbar .icon-bar {
 	background-color: #A9A9A9;
 }
 .btn{
